gateway/k8s/gateway-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: somkiat/gateway
          name: gateway
          imagePullPolicy: IfNotPresent
